-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.15.3
-
3
-
9223372036854775807
The addition of the start_time and elapsed_time fields in the lprocfs stats header in patch https://review.whamcloud.com/49745 "LU-11407 obdclass: add start time to stats files" may break stats parsing if it has not been updated to understand these fields.
Add a tunable parameter "enable_stats_header" to allow the header to be enabled/disabled globally.
- is related to
-
LU-11407 Improve stats data
-
- Resolved
-